--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <p class="project-category">Profile website</p>
             <strong class="project-title">
               <span>Front End project</span>
-              <a href="https://github.com/MohamedFathy610.github.io/potrfolio" class="more-details"
+              <a href="https://mohamedfathy610.github.io/portfolio/" class="more-details"
                 >More details</a
               >
             </strong>
